--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
           <!-- write Cornell Univerity in red next line -->
           <br>
           <!-- <hr style="height:0px; visibility:hidden;" /> -->
-          <img src="./static/images/cornell-university-logo.png" width="40%"></img>
+          <img src="./static/images/uc_logo.png" width="40%"></img>
+          <img src="./static/images/LOGO_UNIVPM.gif" width="40%"></img>
           <!-- <div class="is-size-3 publication-authors">
             <span class="author-block">Cornell University</span>
           </div> -->
