--- a/index.html
+++ b/index.html
@@ -92,11 +92,9 @@
 
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://lunay0yuki.github.io/">Matteo Forlini</a>,</span>
+              <a href="https://scholar.google.com/citations?user=eUi4eGQAAAAJ&hl=en">Matteo Forlini</a>,</span>
             <span class="author-block">
-              <a href="https://kushal2000.github.io">Pedro Neto</a>,</span>
-            <span class="author-block">
-                <a href="https://portal.cs.cornell.edu/people/">Juntao Re</a>,</span>            
+              <a href="https://scholar.google.com/citations?user=UnkrpWIAAAAJ&hl=en">Pedro Neto</a>,</span>            
           </div>
 
           <!-- write Cornell Univerity in red next line -->
