--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="bla bla bla">
+        content="ROASGPTVI: robotic assembly task assisted by GPT-4 vision">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>bla bla bla</title>
+  <title>ROASGPTVI: robotic assembly task assisted by GPT-4 vision</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
