--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">bla <br> bla</h1>
+          <h1 class="title is-1 publication-title">ROASGPTVI: robotic assembly task assisted by GPT-4 vision</h1>
 
           <div class="is-size-5 publication-authors">
             <span class="author-block">
