--- a/index.html
+++ b/index.html
@@ -244,19 +244,19 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Assembly Process Examples</h2>
 
-          <img src="./static/images/fig55.svg">
+          <img src="./static/images/fig55.png">
           <p style="text-align: left;">
             Assembly process followed by an inexperienced operator.
           </p>
           <br>
           <br>
-          <img src="./static/images/fig5.svg">
+          <img src="./static/images/fig5.png">
           <p style="text-align: left;">
             Assembly process followed by an experienced operator.
           </p>
           <br>
           <br>
-          <img src="./static/images/fig555.svg">
+          <img src="./static/images/fig555.png">
           <p style="text-align: left;">
             Example of failure of the system due to an incorrect detection.
           </p>
@@ -364,16 +364,16 @@
         <h2 class="title is-3">Paper</h2>
     <div class="paper-thumbnail">
         <a href="https://arxiv.org/abs/2402.18796.pdf">
-            <img class="layered-paper-big" width="100%" src="./resources/preview_mosaic.png" alt="Paper thumbnail"/>
+            <img class="layered-paper-big" width="100%" src="./static/images/preview_article.png" alt="Paper thumbnail"/>
         </a>
     </div>
     <div class="paper-info">
         <!-- <a href="https://openreview.net/forum?id=rxlokRzNWRq"><h3>ManiCast: Collaborative Manipulation with Cost-Aware Human Forecasting</h3></a>
         <p>Kushal Kedia, Prithwish Dan, Atiksh Bhardwaj, Sanjiban Choudhury</p> -->
         <h3 class="title is-4" style="text-align: center;">BibTex</h3>
-<pre style="overflow-x:hidden; text-wrap:wrap; white-space: pre-wrap;"><code>@misc{wang2024mosaic,
-  title={MOSAIC: A Modular System for Assistive and Interactive Cooking}, 
-  author={Huaxiaoyue Wang and Kushal Kedia and Juntao Ren and Rahma Abdullah and Atiksh Bhardwaj and Angela Chao and Kelly Y Chen and Nathaniel Chin and Prithwish Dan and Xinyi Fan and Gonzalo Gonzalez-Pumariega and Aditya Kompella and Maximus Adrian Pace and Yash Sharma and Xiangwan Sun and Neha Sunkara and Sanjiban Choudhury},
+<pre style="overflow-x:hidden; text-wrap:wrap; white-space: pre-wrap;"><code>@misc{forlini2024D-RMGPT,
+  title={D-RMGPT: Robot-assisted collaborative tasks driven by large multimodal models}, 
+  author={Matteo Forlini, Mihail Babcinschi, Giacomo Palmieri and Pedro Neto},
   year={2024},
   eprint={2402.18796},
   archivePrefix={arXiv},
