--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <img src="./static/images/uc_logo.png" width="40%" class="spaced-image-right" alt="UC Logo">
         </a>
         <a href="https://diism.univpm.it/en/mechanics-applied-to-machines/" target="_blank">
-            <img src="./static/images/LOGO_UNIVPM.gif" width="40%" class="spaced-image-left" alt="UNIVPM Logo">
+            <img src="./static/images/LOGO_UNIVPM.gif" width="30%" class="spaced-image-left" alt="UNIVPM Logo">
         </a>
           <!-- <div class="is-size-3 publication-authors">
             <span class="author-block">Cornell University</span>
@@ -180,14 +180,12 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-3" >
-            Detection-Robot Management GPT (D-RMGPT), a robot-assisted assembly planner based on Large Multimodal Models (LMM) for a generic assembly task.
-          <br>
           <div class="publication-video">
               <!-- add a link to youtube video using iframe -->
 
               <!-- <video poster="" id="shiba" controls playsinline> -->
-                <iframe width="420" height="240" src="https://www.youtube.com/embed/jKp-RqNlW90?si=I23I9oWz2yOCACWf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/2X-SMHGMimk?si=qd0G8mOx_AfyJzkS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <!-- <iframe width="420" height="240" src="https://www.youtube.com/embed/jKp-RqNlW90?si=I23I9oWz2yOCACWf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
                 <!-- <source src="./static/videos/e2e.mp4" type="video/mp4"> -->
               <!-- </video>  -->
           </div>
