--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2402.18796.pdf"
+                <a href="https://arxiv.org/pdf/2408.11761"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -143,7 +143,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2402.18796"
+                <a href="https://arxiv.org/abs/2408.11761"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -361,7 +361,7 @@
       <div class="column" id="Paper">
         <h2 class="title is-3">Paper</h2>
     <div class="paper-thumbnail">
-        <a href="https://arxiv.org/abs/2402.18796.pdf">
+        <a href="https://arxiv.org/pdf/2408.11761">
             <img class="layered-paper-big" width="100%" src="./static/images/preview_article.png" alt="Paper thumbnail"/>
         </a>
     </div>
@@ -369,14 +369,16 @@
         <!-- <a href="https://openreview.net/forum?id=rxlokRzNWRq"><h3>ManiCast: Collaborative Manipulation with Cost-Aware Human Forecasting</h3></a>
         <p>Kushal Kedia, Prithwish Dan, Atiksh Bhardwaj, Sanjiban Choudhury</p> -->
         <h3 class="title is-4" style="text-align: center;">BibTex</h3>
-<pre style="overflow-x:hidden; text-wrap:wrap; white-space: pre-wrap;"><code>@misc{forlini2024D-RMGPT,
+<pre style="overflow-x:hidden; text-wrap:wrap; white-space: pre-wrap;"><code>@misc{forlini2024drmgptrobotassistedcollaborativetasks,
   title={D-RMGPT: Robot-assisted collaborative tasks driven by large multimodal models}, 
-  author={Matteo Forlini, Mihail Babcinschi, Giacomo Palmieri and Pedro Neto},
+  author={M. Forlini and M. Babcinschi and G. Palmieri and P. Neto},
   year={2024},
-  eprint={2402.18796},
+  eprint={2408.11761},
   archivePrefix={arXiv},
-  primaryClass={cs.RO}
-}   
+  primaryClass={cs.RO},
+  url={https://arxiv.org/abs/2408.11761}, 
+}
+  
 </code></pre> 
     </div>
     </div>
