--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             operators in human-robot collaborative tasks without
             requiring any markers or prior local training.</p>
           <br>
-          <img src="./article finished/fig0.jpg" class="image-width">
+          <img src="./static/images/fig0.jpg" class="image-width">
           <br>
           <li style="text-align: left;"> <b>DetGPT-V</b>: perceives the environment 
             through one-shot analysis of prompted images from the
